--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- main file css -->
-    <link rel="stylesheet" href="../my-frist-project/css/main.css">
+    <link rel="stylesheet" href="../Ahmed8141/css/main.css">
     <!-- normal elements in website -->
-    <link rel="stylesheet" href="../my-frist-project/css/normalise.css">
-    <link rel="stylesheet" href="../my-frist-project/css/all.min.css">
+    <link rel="stylesheet" href="../Ahmed8141/css/normalise.css">
+    <link rel="stylesheet" href="../Ahmed8141/css/all.min.css">
     <!-- goggle fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
 <body>
     <header class="header">
         <div class="cont">
-            <img class="logo" src="../my-frist-project/imgs/logo.png" alt="">
+            <img class="logo" src="../Ahmed8141/imgs/logo.png" alt="">
             <div class="links">
                 <span class="icon">
                     <span></span>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col">
                     <div class="image image-column">
-                        <img src="../my-frist-project/imgs/services.jpeg" alt="">
+                        <img src="../Ahmed8141/imgs/services.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -124,21 +124,21 @@
                 <p>If you do it right, it will last forever.</p>
                 <div class="portfolio-content">
                     <div class="card">
-                        <img src="../my-frist-project/imgs/portofoilo-1.jpg" alt="">
+                        <img src="../Ahmed8141/imgs/portofoilo-1.jpg" alt="">
                         <div class="text">
                             <h3>Project Here</h3>
                             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
                         </div>
                     </div>
                         <div class="card">
-                            <img src="../my-frist-project/imgs/portofoilo-2.jpg" alt="">
+                            <img src="../Ahmed8141/imgs/portofoilo-2.jpg" alt="">
                             <div class="text">
                                 <h3>Project Here</h3>
                                 <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
                             </div>
                         </div>
                             <div class="card">
-                                <img src="../my-frist-project/imgs/portofoilo-3.jpg" alt="">
+                                <img src="../Ahmed8141/imgs/portofoilo-3.jpg" alt="">
                                 <div class="text">
                                     <h3>Project Here</h3>
                                     <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.
@@ -156,7 +156,7 @@
             <h2 class="background-text">About</h2>
             <p>Less is more work</p>
             <div class="about-content">
-                <div class="image"><img src="../my-frist-project/imgs/about.jpg" alt=""></div>
+                <div class="image"><img src="../Ahmed8141/imgs/about.jpg" alt=""></div>
                 <div class="text">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati itaque optio deleniti nostrum quibusdam autem quod earum nobis iusto consequatur? Culpa minus provident ipsam. Mollitia corporis sequi labore iure aliquid!</p>
                 <hr>
