--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Jomhuria&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Leon Project</title>
 </head>
 <body>
     <header class="header">
